--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
+    "react-share": "^5.1.0",
+    "react-time-picker": "^6.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
